# plugin-harness

./: .gitignore  CLAUDE.md  PRD.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.dev-kit/: .active-hooks.json  ci-config.json  loop-log.json
.dev-kit/hand-off/: build→review.md  plan→build.md
.githooks/: pre-push
.github/: CODEOWNERS
.github/workflows/: auto-fix-pr.yml  ci.yml  review.yml  version-bump.yml
.prd/: decision-log.md
commands/: new.md
docs/: cc-skill.schema.json  codex-plugin.schema.json  codex-skill.schema.json
phases/0-mvp/: index.json  step0.md  step1.md  step2.md  step3.md  step4.md  step5.md  step6.md
phases/1-skill-creator/: index.json  step0.md  step1.md  step2.md  step3.md  step4.md
phases/1-skill-rewrite/: index.json  step0.md  step1.md  step2.md  step3.md  step4.md
phases/plugin-harness/: index.json  step1.md  step2.md  step3.md  step4.md  step5.md  step6.md  step7.md  step8.md
scripts/: branch-policy.sh  e2e.sh  smoke.sh  test.sh  validate.py
skills/plugin-creator/: SKILL.codex.md  SKILL.md
skills/skill-creator/: SKILL.md
src/adapter/: __init__.py  cc.py  codex.py  install.py
src/assembler/: __init__.py  plan.py
src/emitter/: __init__.py  codex.py  (+3 more)
tests/: test_assembler.py  test_cc_adapter.py  test_cli.py  test_codex_adapter.py  test_emitter.py  test_interview_state.py  test_marketplace_json.py  test_plugin_sub_mode.py  test_question_schema.py  test_runner.py  test_skill_adapter.py  test_skill_prompts.py  test_skill_schema.py  test_skill_sub_mode.py
(+46 files in other folders)
