[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plugin-harness"
version = "0.1.0"
description = "5-question interview → dual-runtime plugin emitter"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1,<4",
    "jsonschema>=4.18,<5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
